<resources>
    <string name="app_name">My Application</string>
    <!-- db log是否打開-->
    <bool name="db_query_log">false</bool>
    <!-- db版本修改-->
    <integer name="db_version">1</integer>
    <!-- db名稱修改 PS:若有新增/刪除欄位,需要修改db name,命名規則db_name_數字遞增.db-->
    <string name="db_name">myapplication_1.db</string>
    <!-- 開關Firebase Crash Reporting-->
    <bool name="crash_reporting">true</bool>
    <!-- 設定Logger是否打開-->
    <bool name="debug_open">true</bool>
    <!-- 色碼模式-->
    <string name="skin_mode">NORMAL_SKIN</string>
    <!-- FB開發ID-->
    <string name="facebook_app_id">1971191289785897</string>
    <string name="fb_login_protocol_scheme">fb1971191289785897</string>
    <string name="fb_callback_url"></string>
    <!-- LINE開發ID-->
    <string name="line_channel_id">1546578124</string>
    <string name="line_channel_secret">2ee81f8e473f1035e9b6e8dbcf1cb837</string>
    <string name="line_callback_url"></string>
    <!-- Instagram開發ID-->
    <string name="instgram_client_id">b5439fea6da94c42b46f904eaf1de91f</string>
    <string name="instgram_client_secret">23966a0bd0d44213ae006de232e9979a</string>
    <string name="instgram_callback_url">https://instagram.com/</string>
    <!-- Twitter開發ID-->
    <string name="twitter_consumer_key">JkepLzU9OHlfaQRfURhFKWy8L</string>
    <string name="twitter_consumer_secret">QIzlljf3F3S5ltTgZlC3owz2grZzLghbJ5dBtma7D4LZ4j12HV</string>
    <string name="twitter_callback_url">http://placeholder.com</string>
    
    <!-- TestActivity.class-->
    <string name="activity_et_name">Input your name...</string>
    <string name="activity_et_phone">Input your phone...</string>
    <string name="activity_load_button">Load</string>
    <string name="activity_update_button">Update</string>
    <string name="activity_load_user_successfully">Load user successfully</string>
    <string name="activity_update_user_successfully">Update user successfully</string>
    <string name="activity_no_user_data">No user data</string>
    <string name="activity_test_dialog_title">activity_test_dialog_title</string>
    <string name="activity_test_dialog_content">activity_test_dialog_content</string>
    <string name="activity_test_dialog_pos_text">confirm</string>
    <string name="activity_test_dialog_neg_text">cancel</string>
    <string name="activity_switch_speech">Switch To Speech</string>
    <string name="activity_switch_pip">Switch To PIP</string>
    <string name="activity_switch_pip_mode">Switch PIP Mode</string>
    <string name="activity_switch_floating_view">Switch To FloatingView</string>
    <string name="activity_switch_highlight_view">Switch To Highlight</string>
    <string name="activity_switch_Interactive_view">Switch To Interactive</string>
    <string name="activity_switch_share_view">Switch To Share</string>
    <string name="activity_switch_paypal_view">Paypal</string>

    <!-- Speech2TextActivity-->
    <string name="activity_speech_text">Speech</string>
    <string name="activity_speech_prompt">Say something...</string>
    <string name="activity_speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="activity_click_btn">Click speech button...</string>

    <!-- PIPActivity-->
    <string name="activity_not_support_pip">No Support PIP Mode</string>
    <string name="activity_trigger_pip">Trigger PIP Mode</string>
    <string name="activity_trigger_pip_success">Trigger Success!</string>

    <!-- FloatingViewActivity-->
    <string name="activity_floating_windows">Trigger Floating Windows</string>
    <string name="activity_need_alert_window_permission">You need System Alert Window Permission to do this</string>

    <!-- HighlightOuterFrameView-->
    <string name="activity_et_hint">input some message...</string>
    <string name="activity_btn_send">send message</string>

    <!-- InteractiveAnimationView-->
    <string name="activity_interactive_btn_push">Push</string>

    <!-- LoginView-->
    <string name="loginview_et_email_hint">email</string>
    <string name="loginview_et_password_hint">password</string>
    <string name="loginview_btn_login">login</string>
    <string name="loginview_btn_sign_up">sign up</string>
    <string name="loginview_msg_email_is_empty">email is empty</string>
    <string name="loginview_msg_invalidation_email">invalidation email (including symbol "@")</string>
    <string name="loginview_msg_password_is_empty">password is empty</string>
    <string name="loginview_msg_invalidation_password">invalidation password (length at least 6)</string>
    <string name="loginview_msg_login_success">Login Success</string>
    <string name="loginview_msg_login_fail">Login Fail</string>
    <string name="twitter_success">twitter login success</string>
    <string name="instagram_success">Instagram login success</string>

    <!-- SignUpView-->
    <string name="signup_et_email_hint">email</string>
    <string name="signup_et_password_hint">password</string>
    <string name="signup_btn_signup">signup</string>
    <string name="signup_btn_back">back</string>
    <string name="signup_msg_signup_success">Sign Up Success</string>
    <string name="signup_msg_signup_fail">Sign Up Fail</string>

    <!-- BaseSignUpActivity-->
    <string name="base_sign_up_loading">Loading</string>

    <!-- ShareView-->
    <string name="share_view_btn_google">Google+</string>
    <string name="share_view_btn_FB">Facebook</string>
    <string name="share_view_btn_twitter">twitter</string>
    <string name="share_view_btn_wechat">WeChat</string>
    <string name="share_view_btn_line">LINE</string>
    <string name="share_view_btn_whatsapp">WhatsApp</string>
    <string name="share_view_btn_weibo">Weibo</string>
    <string name="share_view_btn_chooser">Chooser</string>
</resources>
