<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/share_view_btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/share_view_btn_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_FB"
        app:layout_constraintStart_toEndOf="@+id/share_view_btn_google"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/share_view_btn_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_twitter"
        app:layout_constraintStart_toEndOf="@+id/share_view_btn_fb"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/share_view_btn_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_view_btn_google" />

    <Button
        android:id="@+id/share_view_btn_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_wechat"
        app:layout_constraintStart_toEndOf="@+id/share_view_btn_line"
        app:layout_constraintTop_toBottomOf="@+id/share_view_btn_fb" />

    <Button
        android:id="@+id/share_view_btn_whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/share_view_btn_whatsapp"
        app:layout_constraintStart_toEndOf="@+id/share_view_btn_wechat"
        app:layout_constraintTop_toBottomOf="@+id/share_view_btn_twitter" />

    <Button
        android:id="@+id/share_view_btn_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_weibo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_view_btn_line" />

    <Button
        android:id="@+id/share_view_btn_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_view_btn_chooser"
        app:layout_constraintStart_toEndOf="@+id/share_view_btn_weibo"
        app:layout_constraintTop_toBottomOf="@+id/share_view_btn_wechat" />
</android.support.constraint.ConstraintLayout>