<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/loginview_et_email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/loginview_et_password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Button
        android:id="@+id/loginview_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/loginview_btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/loginview_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/loginview_btn_sign_up"
        app:layout_constraintStart_toEndOf="@+id/loginview_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />


    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/login_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/loginview_btn_login"/>-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/icon_sign_in"
        android:layout_height="@dimen/icon_sign_in"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginview_btn_login"/>

    <Button
        android:id="@+id/line_login_button"
        android:layout_width="@dimen/icon_sign_in"
        android:layout_height="@dimen/icon_sign_in"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_select_line"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/loginview_btn_login" />

    <Button
        android:id="@+id/instagram_login_button"
        android:layout_width="@dimen/icon_sign_in"
        android:layout_height="@dimen/icon_sign_in"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_instagram"
        app:layout_constraintStart_toEndOf="@+id/line_login_button"
        app:layout_constraintTop_toBottomOf="@+id/loginview_btn_login" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="@dimen/icon_sign_in"
        android:layout_height="@dimen/icon_sign_in"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_twitter"
        app:layout_constraintStart_toEndOf="@+id/instagram_login_button"
        app:layout_constraintTop_toBottomOf="@+id/loginview_btn_login" />
</android.support.constraint.ConstraintLayout>